--- a/package.json
+++ b/package.json
@@ -54,10 +54,7 @@
       "@opentelemetry/resources": "1.13.0",
       "@opentelemetry/sdk-trace-base": "1.13.0",
       "@opentelemetry/sdk-trace-node": "1.13.0",
-      "@opentelemetry/semantic-conventions": "1.13.0",
-      "next-contentlayer": {
-        "next": "$next"
-      }
+      "@opentelemetry/semantic-conventions": "1.13.0"
     }
   }
 }
