--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "markdown-wasm": "^1.2.0",
-    "next": "^13.5.4",
+    "next": "^14.2.34",
     "next-contentlayer": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +37,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.0",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
     "rome": "^12.1.3",
@@ -52,7 +53,9 @@
       "@opentelemetry/resources": "1.13.0",
       "@opentelemetry/sdk-trace-base": "1.13.0",
       "@opentelemetry/sdk-trace-node": "1.13.0",
-      "@opentelemetry/semantic-conventions": "1.13.0"
+      "@opentelemetry/semantic-conventions": "1.13.0",
+      "esbuild": ">=0.25.0",
+      "estree-util-value-to-estree": ">=3.3.3"
     }
   }
 }
